--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
     "gh-pages": "^6.3.0",
+    "sass": "^1.92.1",
     "vite": "^5.0.0"
   }
 }
