--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "katex": "^0.16.22",
     "vue": "^3.4.0",
     "vue-router": "^4.2.0"
   },
